--- a/client/ecommerce/src/index.html
+++ b/client/ecommerce/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/fad7e8cf71.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
